--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "@react-oauth/google": "^0.2.8",
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
+    "downshift": "^7.0.4",
     "jwt-decode": "^3.1.2",
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.29.4",
+    "mui-chips-input": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
