--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "redux": "^4.2.0",
